[MINOR] docs: update document for tez client plugin. (#987)
Co-authored-by: zhengchenyu001 <zhengchenyu001@ke.com>